k8s/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-debug-server
spec:
  selector:
    app: web-debug-server
  ports:
  - port: 8080
